Added styling, so the label can be elevated

--- a/src/components/general/Slider/styles.less
+++ b/src/components/general/Slider/styles.less
@@ -103,11 +103,20 @@
             white-space: nowrap;
             font-size: 11px;
             cursor: pointer;
+            
+         
         }
 
         &.isLowered {
            height: calc(var(--grid-unit) * 8px);
         }
+
+         &.isElevated {
+             label{
+                top: 0;
+             }
+        }
+        
     }
 
     &.mouseIsDown {
