fixed bottom prop

--- a/src/components/general/Slider/styles.less
+++ b/src/components/general/Slider/styles.less
@@ -114,6 +114,7 @@
          &.isElevated {
              label{
                 top: 0;
+                bottom: auto;
              }
         }
         
