Cursor fix for disabled component

--- a/src/components/general/Slider/styles.less
+++ b/src/components/general/Slider/styles.less
@@ -158,5 +158,10 @@
         .slider {
             color: var(--color-primary);
         }
+
+        button {
+            cursor: default;
+            pointer-events: none;
+        }
     }
 }
