--- a/src/components/general/TextArea/styles.less
+++ b/src/components/general/TextArea/styles.less
@@ -3,16 +3,18 @@
 .textAreaContainer {
    display: flex;
     flex-direction: column;
+    height: 100%;
 
     .textAreaContent {
         display: flex;
         justify-content: space-between;
-        min-height: .grid-unit(15px)[];
+        min-height: .grid-unit(10px)[];
         background-color: var(--color-black-alt5);
         border-bottom: 1px solid var(--color-primary-accent);
         caret-color: var(--color-primary);
         padding: .grid-unit(1px)[] .grid-unit(2px)[];
         border-radius: 4px 4px 0 0;
+        height: 100%;
 
         > aside {
             padding-right: .grid-unit(2px)[];
@@ -53,6 +55,7 @@
             flex-direction: column;
             position: relative;
             width: 100%;
+            height: 100%;
 
             label {
                 display: flex;
@@ -61,7 +64,7 @@
                 opacity: 0.6;
                 font-size: 16px;
                 transition: top ease .2s, font-size .2s;
-                top: 10%;
+                top: calc(var(--grid-unit) * 2px);
                 -ms-transform: translateY(-50%);
                 transform: translateY(-50%);
             }
