added styling for future and past positions

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -10,6 +10,16 @@
         position: relative;
         transition: box-shadow .15s;
 
+        &.futurePosition{
+            background-color: #EEFCF2;
+            border: 1px solid var(--color-green);
+        }
+
+        &.pastPosition {
+            background-color: #E6E6E6;
+            border: 1px solid var(--color-black-alt3);
+        }
+
         &.isClickable {
             cursor: pointer;
 
