--- a/src/components/general/Stepper/styles.less
+++ b/src/components/general/Stepper/styles.less
@@ -131,7 +131,7 @@
                 }
 
                 &.active {
-                    border: 1px solid transparent;
+                    border: 1px solid var(--color-primary);
                     background: var(--color-primary);
                     color: var(--color-white);
                 }
