Added platformk icon and timeline for rotation pos

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -81,10 +81,11 @@
             }
         }
 
-        .linkedIcon{
+        .stateIcon{
             position: relative;
             display: flex;
             justify-content: center;
+            padding-top: calc(var(--grid-unit)* .5px);
         }
     }
 
