Feature/org/rotation position (#172)
* Added rotation icon

* Added rotation position support for position photo

* Fixed story

* Started working on position card rotation position

* Added platformk icon and timeline for rotation pos

* Changed type

* Name change and removed console log

* Added additional persons as a new prop to person icon

* Added knobs to story

* Format and fixed typo

* Formatting and moved instances with rotaiton to a hook

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -91,10 +91,11 @@
             }
         }
 
-        .linkedIcon{
+        .stateIcon{
             position: relative;
             display: flex;
             justify-content: center;
+            padding-top: calc(var(--grid-unit)* .5px);
         }
     }
 
