some visual adjustments to the fusion components (#75)
* some visual adjustments to the fusion components

* some minor visual adjustments to components in storybook

* fixed indenting in iconbutton style

* fixed indentation in skeleton  styles.less

* people picker test box

* refactoring

* removed unused files

--- a/src/components/general/IconButton/styles.less
+++ b/src/components/general/IconButton/styles.less
@@ -8,6 +8,9 @@
     overflow: visible;
 
     .iconContainer {
+        border:none;
+        border-radius: 0;
+        border-style: solid;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -67,11 +70,34 @@
             }
             &:not(.isActive){
                 .iconContainer {
-                    background-color: var(--color-black-alt5);
+                    background-color: var(--color-primary-hover-alt1);
                 }
             }
         }
         
+    }
+
+    &:focus { 
+        .iconContainer {
+            border: 1px;
+            border-radius: 50%; 
+            border-style: dashed;
+            border-color: var(--color-primary);
+        }
+
+        &.isToggler{
+            .iconContainer{
+                border: none;
+                background-color: var(--color-primary-hover-alt1);
+            }
+
+            &.isActive{ 
+                .iconContainer{
+                    background-color: var(--color-primary);
+                }
+            }
+
+        }
     }
 
     &.isActive {
