--- a/src/components/people/PersonCard/styles.less
+++ b/src/components/people/PersonCard/styles.less
@@ -17,6 +17,12 @@
             }
         }
 
+        .jobTitle{
+            font-weight: 600;
+            font-size: 16px;
+            margin-bottom: var(--name-spacing);
+        }
+        
         .email {
             font-size: 16px;
         }
