MAx height prop for dropdown

--- a/src/components/general/SearchableDropdown/styles.less
+++ b/src/components/general/SearchableDropdown/styles.less
@@ -1,10 +1,7 @@
 @import '~styles/mixins.less';
 
 .menuContainer{
-    position: absolute;
-    top: 100%;
-    min-width: 100%;
-    margin-top: .grid-unit(0.5px)[];
+    overflow: auto;
     pointer-events: all;
 }
 
