Override width on mobile

--- a/src/components/general/SideSheet/Modal/styles.less
+++ b/src/components/general/SideSheet/Modal/styles.less
@@ -21,6 +21,10 @@
         max-width: 100%;
         left: 0;
         transition: transform .1s ease-out;
+
+        .resizeHandle {
+            display: none;
+        }
     }
 
     &.xlarge {
