Use --color-white

--- a/src/components/general/SideSheet/Modal/styles.less
+++ b/src/components/general/SideSheet/Modal/styles.less
@@ -105,7 +105,7 @@
             left: calc(var(--grid-unit) * -1px);
             width: calc(var(--grid-unit) * 3px);
             height: calc(var(--grid-unit) * 3px);
-            background: white;
+            background: var(--color-white);
             border-radius: 4px;
             transform: translateY(-50%);
             display: flex;
